[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab_mimic"
version = "1.0.2"
description = "Mimic for Isaac Lab"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["extension", "template", "isaaclab"]
authors = [{ name = "Isaac Lab Project Developers" }]
maintainers = [{ name = "Isaac Lab Project Developers" }]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Isaac Sim :: 2023.1.1",
  "Isaac Sim :: 4.0.0",
]

dependencies = ["isaaclab", "isaaclab_assets", "isaaclab_tasks", "tomli"]

[project.urls]
Repository = "https://github.com/isaac-sim/IsaacLab.git"

[tool.setuptools]
include-package-data = true
zip-safe = false
packages = ["isaaclab_mimic"]

[project.optional-dependencies]
robomimic = ["robomimic@git+https://github.com/ARISE-Initiative/robomimic.git"]
all = ["robomimic@git+https://github.com/ARISE-Initiative/robomimic.git"]
